feat: add font classes to utils layer
I don't exactly know why this was done, but let's wait for it.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
-.font-serif {
-	font-family: "PT Serif", Georgia, 'Times New Roman', Times, serif;
-}
+@layer utils;
 
-.font-sans {
-	font-family: "Poppins", Arial, Helvetica, sans-serif;
+@layer utils {
+	.font-serif {
+		font-family: "PT Serif", Georgia, 'Times New Roman', Times, serif;
+	}
+
+	.font-sans {
+		font-family: "Poppins", Arial, Helvetica, sans-serif;
+	}
 }
