feat: add initial layers
I still don't get why this is being done, but let's just wait for it

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
-@layer utils;
+@layer reset, base, theme, utils;
+
+@layer reset {}
+
+@layer theme {}
+
+@layer base {}
 
 @layer utils {
 	.font-serif {
