--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,26 @@
 @layer reset, base, theme, utils;
 
-@layer reset {}
+@layer reset {
+
+	*,
+	*::before,
+	*::after {
+		box-sizing: border-box;
+	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6,
+	p {
+		margin: 0;
+		font-size: inherit;
+		font-weight: normal;
+	}
+
+}
 
 @layer theme {}
 
