--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,15 @@
 		font-weight: normal;
 	}
 
+	a {
+		color: inherit;
+		text-decoration: none;
+	}
+
+	a:hover {
+		text-decoration: underline;
+	}
+
 }
 
 @layer theme {}
