feat: set color variables
There are three key colors: background, accent, and foreground color,
which is commonly used on the main text

Yes, often times those colors have a name, and if you name them with a
variable, it'll make styling way easier.

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,13 @@
 
 }
 
-@layer theme {}
+@layer theme {
+	:root {
+		--bg-color: #OB1D26;
+		--accent-color: #FBD784;
+		--foreground-color: #FFF;
+	}
+}
 
 @layer base {}
 
