--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
 
 @layer theme {
 	:root {
-		--bg-color: #OB1D26;
+		--bg-color: #0B1D26;
 		--accent-color: #FBD784;
 		--foreground-color: #FFF;
 	}
@@ -43,6 +43,8 @@
 	body {
 		margin: 0;
 		font-size: 1.125rem;
+		color: var(--foreground-color);
+		background-color: var(--bg-color);
 	}
 }
 
