feat: add bg image to header
as a next step, we'll make the image bigger since it looks cutoff

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,10 @@
 		gap: 1rem;
 	}
 
+	.main-header {
+		background-image: url('./imgs/header-bg.jpg');
+	}
+
 	.main-header-content {
 		max-width: 1750px;
 		margin-inline: auto;
