style: make image span full width
Yes, we want it to span the whole width NO MATTER WHAT

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,8 @@
 
 	.main-header {
 		background-image: url('./imgs/header-bg.jpg');
+		height: 150vh;
+		width: 100%;
 	}
 
 	.main-header-content {
