style: change bg image position
By default, it's positioned 50% 50% (fully centered), but this time we
positioned it 25% 25%, which, in the end, places it more at the top left

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,8 @@
 		background-image: url('./imgs/header-bg.jpg');
 		height: 150vh;
 		width: 100%;
+		background-size: cover;
+		background-position: 25% 25%;
 	}
 
 	.main-header-content {
