style: set a negative margin on header
Initial problem: when you scroll down the page, you don't immediately
see the content, which affects user experience

Solution: set a negative margin so that you don't have to scroll a lot
to actually see the next content; just a matter of a slight scroll and
you can see the rest of the content

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@
 		width: 100%;
 		background-size: cover;
 		background-position: 25% 25%;
+		margin-block-end: -50vh;
 	}
 
 	.main-header-content {
