--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@
 		display: flex;
 		gap: 0.5rem;
 		align-items: flex-start;
+		animation: bounce 1s infinite alternate;
 	}
 
 	.scroll-down svg {
