feat: implement bounce animation
that animation is pretty simple, we just made it move downwards a little
bit (with translate: 0 25%;) and made it alternate infinitely

--- a/styles.css
+++ b/styles.css
@@ -101,11 +101,17 @@
 		display: flex;
 		gap: 0.5rem;
 		align-items: flex-start;
-		animation: bounce 1s infinite alternate;
 	}
 
 	.scroll-down svg {
 		width: 16px;
+		animation: bounce 1s infinite alternate;
+	}
+
+	@keyframes bounce {
+		100% {
+			translate: 0 25%;
+		}
 	}
 }
 
