feat: remove animation on preference
This helps people with certain vestibular disorders and certain other
conditions who can experience discomfort, dizziness, nausea, or even
migraines from animated motion on screens.

--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,10 @@
 	.scroll-down svg {
 		width: 16px;
 		animation: bounce 1s infinite alternate;
+
+		@media (prefers-reduced-motion: reduce) {
+			animation: none;
+		}
 	}
 
 	@keyframes bounce {
