--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,10 @@
 
 		&::before {
 			content: "";
+			display: block;
+			width: 4.5rem;
+			height: 2px;
+			background-color: var(--accent-color);
 		}
 	}
 }
