style: reduce font size on smaller screens
When the viewport size is at most 800px, the root font size will
decrease from 1.125rem to 1rem

Something that confuses me is that on Figma design they have the same
root font size. What?

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@
 		font-size: 1.125rem;
 		color: var(--foreground-color);
 		background-color: var(--bg-color);
+
+		@media (width <=800px) {
+			font-size: 1rem;
+		}
 	}
 }
 
