feat: change top bar layout on different screen size
When the screen size is roughly below 1280px, I don't want the blank
space to appear at the right hand side of the top bar

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,10 @@
 		gap: 1rem;
 		align-items: center;
 		padding-block: 4rem;
+
+		@media (width <=1280px) {
+			grid-template-columns: 1fr auto;
+		}
 	}
 
 	.brand-logo {
