style: apply responsive on top bar
When the horizontal viewport is somewhat below 500px (my estimation),
two things have to change:
1. the navbar links must be aligned vertically
2. the top bar must be aligned at the vertical top. According to the
design, the MNTN brand logo must NOT appear aligned at the center of the
block direction, but at the very start. That's it

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,10 @@
 		@media (width <=1280px) {
 			grid-template-columns: 1fr auto;
 		}
+
+		@media (width <=500px) {
+			align-items: flex-start;
+		}
 	}
 
 	.brand-logo {
@@ -73,7 +77,12 @@
 
 	.main-header-nav {
 		display: flex;
+		flex-direction: row;
 		gap: 1rem;
+
+		@media (width <=500px) {
+			flex-direction: column;
+		}
 	}
 
 	.main-header {
