style: reduce block padding on below 800px
As specified on the design, the space at the top of the top bar (which
corresponds to the padding block) is less, so we made it to be smaller
when the screen width is below 800px (it'll look good c:)

--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,10 @@
 		@media (width <=500px) {
 			align-items: flex-start;
 		}
+
+		@media (width <=800px) {
+			padding-block-start: 2rem;
+		}
 	}
 
 	.brand-logo {
