--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,10 @@
 		@media (width <=800px) {
 			font-size: 3.25rem;
 		}
+
+		@media (width <=640px) {
+			font-size: 2.5rem;
+		}
 	}
 
 	.scroll-down {
