style: remove block start margin on title
When we hit 800px, the top bar above no longer has the space at the top,
so the margin the header container had looks nasty and not proportional,
so we decreased its margin

We could've decreased it to around 4vh, but we wanted it to look
readable and above the mountains, so putting it to 0vh looked
well-spaced and readable

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,10 @@
 		max-width: 1000px;
 		margin-inline: auto;
 		margin-block-start: 10vh;
+
+		@media (width <=800px) {
+			margin-block-start: 0;
+		}
 	}
 
 	.main-header-title {
