feat: remove dash on tagline
According to the design, we should remove that element on very small
screens

Testing it myself, the tagline would wrap into two lines on very small
screens, so I saw it good to remove it for below the size of a large
mobile screen (425px)

Though not done on the video, this change looks very good

--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,12 @@
 			height: 2px;
 			background-color: var(--accent-color);
 		}
+
+		@media (width <=425px) {
+			&::before {
+				display: none;
+			}
+		}
 	}
 }
 
