feat: add div for fade out effect
We just made the div occupy 50vh so that the fade starts after the user
starts scrolling the page

the linear gradient is what helps with the fading effect, first starting
transparent (thus showing the background image) and then the normal
background color, and we made it show the background color almost at the
very bottom (roughly 75%)

--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,11 @@
 			translate: 0 25%;
 		}
 	}
+
+	.header-fade-out {
+		height: 50vh;
+		background: linear-gradient(to bottom, transparent, var(--bg-color) 75%);
+	}
 }
 
 /*Reusable components*/
