feat: reduce margin at the bottom
If we add content below the fade container, it'll start right after the
fade effect, but we don't want that; we want the content to be somewhat
on the fade.

In order to correct that, we'll add a negative margin at the bottom.
It'll help placing the next content over the fade effect, which is
exactly what we want, according to the Figma design.

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@
 	.header-fade-out {
 		height: 50vh;
 		background: linear-gradient(to bottom, transparent, var(--bg-color) 75%);
+		margin-block-end: -25vh;
 	}
 }
 
