feat: show before number with attribute
I had forgot about the attr() function. Pretty useful.

--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,12 @@
 		align-items: center;
 		gap: 8rem;
 	}
+
+	.section-text-wrapper {
+		&::before {
+			content: attr(data-number);
+		}
+	}
 }
 
 /*Reusable components*/
