feat: position before element relatively
It's essentially the same I had done previously by absolutely
positioning the element

--- a/styles.css
+++ b/styles.css
@@ -174,8 +174,13 @@
 	}
 
 	.section-text-wrapper {
+		position: relative;
+
 		&::before {
 			content: attr(data-number);
+			position: absolute;
+			top: 0;
+			left: 0;
 		}
 	}
 }
