--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,14 @@
 			opacity: .1;
 		}
 	}
+
+	.section-text-container {
+		display: flex;
+		flex-direction: column;
+		gap: 1.33rem;
+		margin-inline-start: 8rem;
+	}
+
 	.section-title {
 		font-size: 3.5rem;
 		text-wrap: balance;
