--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,12 @@
 		margin-inline: auto;
 		padding-inline: 2rem;
 		margin-block-end: 6.75rem;
+		display: flex;
+		flex-direction: column;
+	}
+
+	.main-content {
+		display: contents;
 	}
 
 	.section {
