style: apply styles to read more link
1. layout as a flex with some gap and aligning items to the center
vertically. Accent color as its font color

2. reduced svg's size to 16px and rotated so that it points to the
bottom

--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,18 @@
 		display: contents;
 	}
 
+	.read-more-link {
+		display: flex;
+		gap: .5rem;
+		align-items: center;
+		color: var(--accent-color);
+
+		svg {
+			width: 16px;
+			rotate: -90deg;
+		}
+	}
+
 	.section {
 		display: flex;
 		align-items: center;
