feat: reduce image size at a certain point
When we reach around 1450px viewport width, it looks better to make the
image a bit smaller. Its size won't clash with the text and will look
not bad

--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,10 @@
 		aspect-ratio: 7 / 9;
 		object-fit: cover;
 		border-radius: 1rem;
+
+		@media (width <=1450px) {
+			max-width: 400px;
+		}
 	}
 
 }
