feat: remove margin on larger screens
When I was testing responsiveness, the section looked kind of piled up,
so in order to correct it, I removed the margin at the start of the text
container. Looked nice.

--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,10 @@
 		flex-direction: column;
 		gap: 1.33rem;
 		margin-inline-start: 8rem;
+
+		@media (width <=1200px) {
+			margin-inline-start: 0;
+		}
 	}
 
 	.section-title {
