feat: modify before element on smaller screens
We decreased its font size and also its line height. Line height because
it also helps to position it more at the top.

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,11 @@
 			font-size: 14rem;
 			font-weight: 900;
 			opacity: .1;
+
+			@media (width <=1200px) {
+				font-size: 8rem;
+				line-height: 0;
+			}
 		}
 	}
 
