--- a/styles.css
+++ b/styles.css
@@ -205,8 +205,14 @@
 
 	.section {
 		display: flex;
+		flex-direction: row;
 		align-items: center;
 		gap: 8rem;
+
+		@media (width <=800px) {
+			flex-direction: column;
+			gap: 4rem;
+		}
 	}
 
 	.section-text-wrapper {
@@ -246,6 +252,10 @@
 	.section-title {
 		font-size: 3.5rem;
 		text-wrap: balance;
+
+		@media (width <=1100px) {
+			font-size: 2.5rem;
+		}
 	}
 
 	.section-text {
@@ -260,6 +270,10 @@
 
 		@media (width <=1450px) {
 			max-width: 400px;
+		}
+
+		@media (width <=1100px) {
+			max-width: 300px;
 		}
 	}
 
