fix: specify image's width to 100%
Without it, the image's width is either its NATURAL SIZE or the
specified max-width, whichever was smaller.

Adding width: 100%, we're telling to it "Take up 100% of the container's
width, but NEVER exceed the max-width values I've defined"

--- a/styles.css
+++ b/styles.css
@@ -267,6 +267,7 @@
 		aspect-ratio: 7 / 9;
 		object-fit: cover;
 		border-radius: 1rem;
+		width: 100%;
 
 		@media (width <=1450px) {
 			max-width: 400px;
