fix: place right section order
The second section must conserve its normal order on smaller widths, for
which we added a class for fixing that little issue

--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,12 @@
 		}
 	}
 
+	@media (width <=800px) {
+		.section-reversed-order {
+			flex-direction: column-reverse;
+		}
+	}
+
 }
 
 /*Reusable components*/
