feat: arrange footer elements a bit
We just set the footer to be a horizontal flex that will place both the
brand content and the links far away from each other, resulting in the
layout we want, according to Figma design

--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,14 @@
 
 }
 
+/*Footer*/
+@layer components {
+	.footer {
+		display: flex;
+		justify-content: space-between;
+	}
+}
+
 /*Reusable components*/
 @layer components {
 	.section-tagline {
