feat: layout footer brand info
Aligned elements vertically with spacing between them.

--- a/styles.css
+++ b/styles.css
@@ -297,6 +297,12 @@
 		display: flex;
 		justify-content: space-between;
 	}
+
+	.footer-brand-info {
+		display: flex;
+		flex-direction: column;
+		gap: 1.5rem;
+	}
 }
 
 /*Reusable components*/
