feat: stack element vertically on footer
When the viewport's width is below 1100px, we stack the footer's
elements vertically in reverse order because on the Figma design, the
links section is placed above the brand section

--- a/styles.css
+++ b/styles.css
@@ -295,7 +295,13 @@
 @layer components {
 	.footer {
 		display: flex;
+		flex-direction: row;
 		justify-content: space-between;
+
+		@media (width <=1100px) {
+			flex-direction: column-reverse;
+			gap: 3rem;
+		}
 	}
 
 	.footer-brand-info {
