--- a/styles.css
+++ b/styles.css
@@ -323,6 +323,14 @@
 	.footer-links {
 		display: flex;
 		gap: 11rem;
+
+		@media (width <=1100px) {
+			gap: 3rem;
+		}
+
+		@media (width <=640px) {
+			display: contents;
+		}
 	}
 
 	.footer-link-section {
