--- a/styles.css
+++ b/styles.css
@@ -210,10 +210,24 @@
 		flex-direction: row;
 		align-items: center;
 		gap: 8rem;
+		animation: fade-in linear;
+		animation-timeline: view();
 
 		@media (width <=800px) {
 			flex-direction: column;
 			gap: 4rem;
+		}
+	}
+
+	@keyframes fade-in {
+		from {
+			scale: .8;
+			opacity: 0;
+		}
+
+		to {
+			scale: 1;
+			opacity: 1;
 		}
 	}
 
